Modularization setup complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,23 @@
 cmake_minimum_required(VERSION 3.20)
-project(xcx LANGUAGES CXX)
+
+project(xcx VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(xcx src/main.cpp)
+add_executable(${PROJECT_NAME}
+    src/main.cpp
+    src/setup.cpp
+)
+
+target_include_directories(${PROJECT_NAME}
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+)
+
+# Warnings
+target_compile_options(${PROJECT_NAME}
+    PRIVATE
+        -Wall -Wextra -Wpedantic
+)
